=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 2.007 - In Development

=over

=item *

Fixed bug in which HTTP redirects in KRANG_DEBUG mode would
cause session to not be unloaded and saved to disk.  [Jesse Erlbaum]

=item *

MSIE Mac is not un-supported (it never was really, it's now
official). Allow Konqueror to come in as well. [Michael Peters]

=item *

Fixed several places lacking in HTML escaping, particularly
in places that used Krang::HTMLPager. [Michael Peters]

=item *

Krang now automatically deletes any alerts tied to a desk when
that desk is deleted. [Michael Peters]

=item *

Fixed krang_install --FromBackup issues when the backups contain
addons. [Michael Peters]

=item *

Fixed bug where KDS import would trigger delete_hook calls when
updating elements for stories and categories. [Sam]

=item *

Allow users whose page-size preference is 100, to be able to toggle
between 100 and 20, instead of 100 and 100. [Michael Peters]

=item *

Fixed redirect problem when going to the installation root already
logged in on a single installation machine (resulted in a 404).
[Michael Peters]

=item *

Entering F<publisher.pl> without any query params or a story in
the session will now redirect to the workspace instead of croak'ing.
[Michael Peters]

=item *

Fix issue in Krang::CGI::Story::db_save() changes to the slug or title
could get lost if the submission was invalid for other reasons.
[Michael Peters]

=item *

In Krang::CGI::Story::view(), use tmpl_var 'is_root' to inform
templates/Story/view.tmpl whether to show the 'Edit' button or not.
In templates/Story/view.tmpl, get rid of tmpl_var 'old_version'
which fails to show this button when returning from viewing a non-root
sub-element.  [Bodo Schulze]


=item *

In templates/Contrib/associate_list_view.tmpl, alert user if no
contributor has been checked to (un-)associate.  [Bodo Schulze]


=item *
