@@ -43,15 +43,17 @@ sub new {
                                                            max => 1,
                                                            allow_delete => 1,
                                                            reorderable => 1 ),
-                  pkg('ElementClass::CheckBoxGroup')->new( name => 'cbg_listgroup',
+                  pkg('ElementClass::ListGroup')->new( name => 'cbg_listgroup',
                                                            list_group => "Cost",
+                                                       size=>1,
                                                            min => 1,
                                                            max => 1,
                                                            allow_delete => 1,
                                                            reorderable => 1 ),
-                  pkg('ElementClass::CheckBoxGroup')->new( name => 'cbg_listgroup_2',
+                  pkg('ElementClass::ListGroup')->new( name => 'cbg_listgroup_2',
                                                            list_group => "Make/Model/Year",
                                                            min => 1,
+                                                       size=>1,
                                                            max => 1,
                                                            allow_delete => 1,
                                                            reorderable => 1 ),
